all files updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZENITH BANK</title>
+    <title> ZENITH BANK- In Your Best Interest</title>
 
     
 
@@ -20,10 +20,11 @@
 
 </head>
 <body>
+    
 <!-- APPEAR LATER -->
     <ul class="appearlater">
-        <li><a class="appearlater1" href="">Open Account</a></li>
-        <li><a class="appearlater2" href="">Virtual cards</a></li>
+        <li><a class="appearlater1" href="./openAccount.html">Open Account</a></li>
+        <li><a class="appearlater2" href="./virtual card.html">Virtual cards</a></li>
         <li><a class="appearlater3"  href="">Apps</a></li>
     </ul>
 <!-- APPEAR LATER END -->
@@ -34,7 +35,7 @@
             <ul>
                 <li><a href="">Help Centre</a></li>
                 <li><a href="">Find Us</a></li>
-                <li><a href="">Open Account</a></li>
+                <li><a href="./openAccount.html">Open Account</a></li>
             </ul>
         </div>
         <div class="right">
