--- a/openAccount.html
+++ b/openAccount.html
@@ -35,7 +35,7 @@
         <span class="checkmark"></span>
         </label><br><br>
         
-        <a class="dia" href="">I want a diaspora account</a><br><br>
+        <a class="dia" href="./diaspora.html">I want a diaspora account</a><br><br>
 
         <button class="start">Get Started</button><br><br>
         <p class="already">Already have an account ? ..Click here to <span class="update"><a href="./updateAccount.html">Update Account</a></span></p>
